fix: fix activity chart overflow

--- a/styles/app/stats.css
+++ b/styles/app/stats.css
@@ -7,6 +7,7 @@
   border: 2px solid var(--bg);
   padding: 0.75rem;
   border-radius: 5px;
+  overflow-x: auto;
 }
 
 .week {
@@ -34,10 +35,4 @@
   border-radius: 3px;
   font-size: 0.8rem;
   display: none;
-}
-
-@media only screen and (width <= 700px) {
-  .calendar {
-    overflow-x: scroll;
-  }
 }
